# Textverarbeitung

./: .gitignore  README.md  README_OLD.md  TASKS.md  pyproject.toml  requirements.txt  start.sh
option_2_platform/: .gitignore  BENCHMARK_INTEGRATION_REPORT.md  BENCHMARK_PHASE_1_DELIVERABLE.md  CLEANUP_REPORT.md  DOCUMENT_VIEWER_IMPLEMENTATION.md  PROJECT_STATUS.md  README.md  TEST_ANALYSIS_COMPREHENSIVE_REPORT.md  TEST_STRUCTURE_CLEANUP_REPORT.md  debug_projects.py  dummy_upload.txt  init_system.py  pyproject.toml  start_v2.sh
option_2_platform/.specify/memory/: constitution.md
option_2_platform/backend/: .TO_MIGRATE  dependencies.py
option_2_platform/backend/core/: models.py
option_2_platform/backend/llm/: ollama_client.py
option_2_platform/backend/services/: project_service.py
option_2_platform/benchmarks/: __init__.py
option_2_platform/benchmarks/utils/: __init__.py  config.py  llm_client.py  rag_helper.py  validation.py
option_2_platform/config/: config.example.yaml  config.yaml  ollama.toml
option_2_platform/config/criteria/: README.md
option_2_platform/docs/: 00_README.md  02_testing_guide.md  TESTING.md
option_2_platform/examples/: batch_queries.py  ingest_test_documents.py  performance_benchmark.py  prompt_examples.py  rag_demo.py  test_ollama_connection.py  vector_store_demo.py
option_2_platform/frontend/: .TO_REFACTOR  ANALYSIS.md  README.md  REFACTORING_PLAN.md  main.py  main_dev_standalone.py  mock_data.py
option_2_platform/frontend/routers/: admin.py  benchmark.py  chat.py  criteria.py  dashboard.py  logo.py  projects.py  settings.py  wizard.py
option_2_platform/frontend/services/: api_client.py  project_service.py
option_2_platform/frontend/templates/: base.html  benchmark.html  chat.html  criteria_list.html  index.html  logo.html  project_detail.html  project_review.html  projects_list.html  projects_overview.html  settings.html
option_2_platform/scripts/: check_infrastructure.sh  check_performance.py  generate_sample_data.py  generate_test_files.py  ingest_samples.py  init_system.py  setup_real_docs.py  start_api.py  start_app.py  test_real_documents.py
option_2_platform/specs/: constitution.md  plan.md  tasks.md
option_2_platform/specs/01_ollama_integration/: spec.md
option_2_platform/specs/02_document_parsing/: metadata_schema.md  spec.md
option_2_platform/specs/03_rag_system/: spec.md
option_2_platform/specs/04_criteria_engine/: spec.md
option_2_platform/specs/initial-setup/: plan.md  spec.md  tasks.md
option_2_platform/src/: main.py
option_2_platform/src/api/: README.md  dependencies.py  main.py  middleware.py  schemas.py
option_2_platform/src/core/: config.py  models.py
option_2_platform/src/ollama/: client.py
option_2_platform/src/parsers/: __init__.py  base.py  docx_parser.py  exceptions.py  models.py  pdf_parser.py  xlsx_parser.py
option_2_platform/src/rag/: chunker.py  config.py  embeddings.py  exceptions.py  ingestion.py  llm_chain.py  llm_provider.py  models.py  prompt_builder.py  prompts.py  response_parser.py  retrieval.py  vector_store.py
option_2_platform/src/services/: chat_service.py  pdf_annotation_service.py  project_service.py  settings_service.py  validation_service.py
option_2_platform/tests/: conftest.py  test_dashboard.py  test_project_service.py
option_2_platform/tests/_old_tests/: test_app_setup.py  test_llm.py  test_llm_integration.py
option_2_platform/tests/test_api/: test_endpoints.py
option_2_platform/tests/test_benchmarks/: PHASE_1_REPORT.md  README.md  __init__.py  conftest.py  test_suite.py
option_2_platform/tests/test_criteria/: __init__.py  test_criteria_validation.py
option_2_platform/tests/test_general/: __init__.py  test_error_handling.py  test_system_checks.py
option_2_platform/tests/test_integration/: test_full_workflow.py
option_2_platform/tests/test_ollama/: test_infrastructure.py
option_2_platform/tests/test_parsers/: test_docx_parser.py  test_pdf_parser.py  test_xlsx_parser.py
option_2_platform/tests/test_rag/: test_chunker.py  test_embeddings.py  test_end_to_end.py  test_full_pipeline.py  test_llm_chain.py  test_llm_provider.py  (+4 more)
(+255 files in other folders)
