[project]
name = "ifb-profi"
version = "0.1.0"
description = "Automatisierte Antragsprüfung für IFB PROFI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Patrick Zackert", email = "patrick.zackert@example.com" }
]
license = { text = "MIT" }

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",

    # Templates
    "jinja2>=3.1.4",
    "markdown>=3.5.0",

    # RAG System
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # LLM
    "ollama>=0.3.0",

    # Document Parsing
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",

    # Utils
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "frontend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
